[project]
name = "python-flask"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wellerson", email = "wllrsn.c@gmail.com"},
]
dependencies = ["flask>=3.1.0", "requests>=2.32.3", "pytest>=8.3.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
